log
Fri Mar 20 05:38:04 PM UTC 2026: 
 tests:  0|5
total_score: 0/70
ad94241
Fri Mar 20 05:50:51 PM UTC 2026: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:79:24: error: implicit declaration of function ‘crearPila’ [-Wimplicit-function-declaration]
   79 |    Stack* P_auxiliar = crearPila();
      |                        ^~~~~~~~~
exercises.c:79:24: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
exercises.c:80:18: error: comparison between pointer and integer [-Werror]
   80 |    while(top(P1) != -1){
      |                  ^~
exercises.c:86:26: error: comparison between pointer and integer [-Werror]
   86 |    while(top(P_auxiliar) != -1){
      |                          ^~
exercises.c:88:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Wimplicit-function-declaration]
   88 |       push_back(P1, elemento);
      |       ^~~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
f5b20c6
Fri Mar 20 05:56:47 PM UTC 2026: 
 exercises.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:79:24: error: implicit declaration of function ‘CreateStack’; did you mean ‘create_stack’? [-Wimplicit-function-declaration]
   79 |    Stack* P_auxiliar = CreateStack();
      |                        ^~~~~~~~~~~
      |                        create_stack
exercises.c:79:24: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
04bac78
Fri Mar 20 05:57:25 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
aa1117a
Fri Mar 20 05:58:14 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
6e31513
Fri Mar 20 06:05:58 PM UTC 2026: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:8: error: invalid use of undefined type ‘struct List’
   48 |       L[i] = i + 1;
      |        ^
exercises.c:48:12: error: invalid use of incomplete typedef ‘List’
   48 |       L[i] = i + 1;
      |            ^
exercises.c:47:12: error: unused variable ‘elemento’ [-Werror=unused-variable]
   47 |       int* elemento = malloc(sizeof(int*));
      |            ^~~~~~~~
cc1: all warnings being treated as errors
4949427
Fri Mar 20 06:09:16 PM UTC 2026: 
 exercises.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:58:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   58 |       suma += elemento;
      |            ^~
cef7f40
Fri Mar 20 06:09:44 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:58:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   58 |       suma += elemento;
      |            ^~
ddd9a4e
Fri Mar 20 06:10:03 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:19: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   56 |    int elemento = first(L);
      |                   ^~~~~
exercises.c:57:19: error: comparison between pointer and integer [-Werror]
   57 |    while(elemento != NULL){
      |                   ^~
exercises.c:59:16: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   59 |       elemento = next(L);
      |                ^
cc1: all warnings being treated as errors
0a849a5
Fri Mar 20 06:11:28 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:58:12: error: invalid operands to binary + (have ‘void *’ and ‘void *’)
   58 |       suma += elemento;
      |            ^~
exercises.c:61:11: error: returning ‘void *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Wint-conversion]
   61 |    return suma;
      |           ^~~~
930d367
Fri Mar 20 06:11:51 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:19: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   56 |    int elemento = first(L);
      |                   ^~~~~
exercises.c:57:19: error: comparison between pointer and integer [-Werror]
   57 |    while(elemento != NULL){
      |                   ^~
exercises.c:59:16: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   59 |       elemento = next(L);
      |                ^
cc1: all warnings being treated as errors
8b5aece
Fri Mar 20 06:12:09 PM UTC 2026: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:19: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   56 |    int elemento = first(L);
      |                   ^~~~~
exercises.c:57:19: error: comparison between pointer and integer [-Werror]
   57 |    while(elemento != NULL){
      |                   ^~
cc1: all warnings being treated as errors
1339748
Fri Mar 20 06:13:29 PM UTC 2026: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:58:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   58 |       suma += elemento;
      |            ^~
f7824e9
Fri Mar 20 06:13:43 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:58:12: error: invalid operands to binary + (have ‘int *’ and ‘int *’)
   58 |       suma += elemento;
      |            ^~
exercises.c:61:11: error: returning ‘int *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Wint-conversion]
   61 |    return suma;
      |           ^~~~
cfd5777
Fri Mar 20 06:15:23 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:19: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   56 |    int elemento = first(L);
      |                   ^~~~~
exercises.c:57:19: error: comparison between pointer and integer [-Werror]
   57 |    while(elemento != NULL){
      |                   ^~
exercises.c:59:16: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   59 |       elemento = next(L);
      |                ^
cc1: all warnings being treated as errors
30b7e52
Fri Mar 20 06:15:59 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:19: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   56 |    int elemento = first(L);
      |                   ^~~~~
exercises.c:57:19: error: comparison between pointer and integer [-Werror]
   57 |    while(elemento != NULL){
      |                   ^~
exercises.c:59:11: error: passing argument 1 of ‘pop’ makes pointer from integer without a cast [-Wint-conversion]
   59 |       pop(elemento);
      |           ^~~~~~~~
      |           |
      |           int
In file included from exercises.c:7:
stack.h:17:18: note: expected ‘Stack *’ {aka ‘List *’} but argument is of type ‘int’
   17 | void *pop(Stack *stack) { return popFront(stack); }
      |           ~~~~~~~^~~~~
cc1: all warnings being treated as errors
15ccc31
Fri Mar 20 06:16:23 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:19: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   56 |    int elemento = first(L);
      |                   ^~~~~
exercises.c:57:19: error: comparison between pointer and integer [-Werror]
   57 |    while(elemento != NULL){
      |                   ^~
cc1: all warnings being treated as errors
bdef8f9
Fri Mar 20 06:20:28 PM UTC 2026: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:58:15: error: expected expression before ‘int’
   58 |       suma += int(elemento);
      |               ^~~
71829f5
Fri Mar 20 06:21:04 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:58:15: error: expected expression before ‘int’
   58 |       suma += int(int*(elemento));
      |               ^~~
46dd095
